--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+3 July 2002
+------------------
+- link to first new topic
+- link to last topic
+- fixed missing last topic
+- small bug fixed
+
+
 24 June 2002
 ------------------
 - admin setting to enable/disable internal caching
