--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+8 July 2002
+------------------
+- correctly handle filters
+- cosmetic changes
+
+
 3 July 2002
 ------------------
 - link to first new topic
